package Figure;

import drawing.Drawable;

public interface Figure extends Drawable {
    double getArea();

    double getPerimeter();
}
